k8s/middleware-compress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-compress
  namespace: default
spec:
  compress: {}
