k8s/namespace-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: venture
  labels:
    environment: production
    project: venture-api
