k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: venture-staging
  annotations:
    # Help Traefik detect changes faster
    traefik.ingress.kubernetes.io/service.sticky.cookie: "false"
spec:
  selector:
    app: venture-api
    # Initial color - will be patched during blue-green deployment
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
  # Disable session affinity to prevent stale connections
  sessionAffinity: None
  # Only publish ready endpoints
  publishNotReadyAddresses: false
  type: ClusterIP
