k8s/namespace.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: venture-staging
spec:
  selector:
    app: venture-api
    color: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
